--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,7 @@
       <version>8.0.23</version>
     </dependency>
 
-    <!-- c3p0 -->
-    <dependency>
-      <groupId>com.mchange</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>0.9.5.2</version>
-    </dependency>
-
+    <!--Apache Commons-->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
